[package]
name = "nostr-bench"
version = "0.1.1"
edition = "2021"
description = "Nostr relay benchmarking tool."
license = "MIT"
homepage = "https://github.com/arronzhang/nostr-bench"
repository = "https://github.com/arronzhang/nostr-bench.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
futures-util = "0.3.26"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.17"

[[example]]
name = "server"
