[package]
name = "nostr-bench"
version = "0.2.1"
edition = "2021"
description = "Nostr relay benchmarking tool."
license = "MIT"
homepage = "https://github.com/arronzhang/nostr-bench"
repository = "https://github.com/arronzhang/nostr-bench.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
futures-util = "0.3.26"
nostr = { version = "0.19.5", default-features = false }
parking_lot = "0.12.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"

[dev-dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
criterion = "0.4.0"
env_logger = "0.10.0"
flume = "0.10.14"
log = "0.4.17"

[[example]]
name = "server"

[[bench]]
name = "util"
harness = false
